# cogniteam-haystack-person-follower

./: .~lock.person_follower_state_machine.odp#  README.md  follower.rviz  person_follower_state_machine.odp  state-machine.pptx
cogniteam_person_follower/: CMakeLists.txt
cogniteam_person_follower/include/: cogniteam_person_follower.h  detectnet.h
cogniteam_person_follower/launch/: cogniteam_person_follower.launch
cogniteam_person_follower/param/: person_3d_locator_param.yaml
leg_tracker/msg/: Leg.msg
leg_tracker/src/: detect_leg_clusters.cpp
person-follower/: CMakeLists.txt  package.xml
person-follower/include/: cogniteam_person_follower.h  ros_compat.h
person-follower/launch/: cogniteam_person_follower.launch
person-follower/src/: cogniteam_person_follower_node.cpp  detectnet.cpp
yakir/: tutorial.txt
yocs_velocity_smoother/launch/: velocity_smoother.launch  velocity_smoother_with_params.launch
