<?xml version="1.0"?>
<package format="2">
  <name>cogniteam_person_follower</name>
  <version>0.0.0</version>
  <description>The cogniteam_person_follower package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yakir@cogniteam.comn">yakirhuri</maintainer>



  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>leg_tracker</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <exec_depend>leg_tracker</exec_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
